✨ fix key metrics block on tablet

--- a/site/gdocs/components/KeyIndicator.scss
+++ b/site/gdocs/components/KeyIndicator.scss
@@ -8,7 +8,7 @@
     }
 
     .left {
-        @include sm-only {
+        @include md-down {
             margin-bottom: 16px;
         }
     }
